# space-invaders

./: .gitignore  Cargo.toml  GAME_PLAN.md  README.md  build.sh
.github/workflows/: deploy.yml
rom/: assembler.py  build.py  validate_steps.py
rom/steps/: step_01_boot_clear.asm  step_02_player_bunkers.asm  step_03_invader_row.asm  step_04_invader_march.asm  step_05_player_move.asm  step_06_shot_hit.asm  step_07_edge_reverse.asm
src/: cpu.rs  lib.rs  machine.rs
tests/: test_homebrew_rom.rs
www/: index.html  manifest.json  sw.js
www/css/: game.css
www/js/: game.js  heatmap.js  joystick.js
www/js/filters/: execute_frame.js  load_rom.js  read_input.js  render_frame.js  update_audio.js
www/roms/: game.rom  step_01_boot_clear.rom  step_06_shot_hit.rom
www/wasm/: space_invaders_emu.js
